[gd_scene load_steps=8 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://fonts/Pixeled.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://sprites/dxb-01.png" type="Texture" id=3]
[ext_resource path="res://control/mainMenu.gd" type="Script" id=4]
[ext_resource path="res://background/background.png" type="Texture" id=5]
[ext_resource path="res://sounds/cambiando de pesta√±a.mp3" type="AudioStream" id=6]

[sub_resource type="DynamicFont" id=1]
size = 20
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -399.0
margin_top = -198.0
margin_right = 404.0
margin_bottom = 215.0
custom_constants/separation = 37
__meta__ = {
"_edit_use_anchors_": false
}

[node name="logo juego" type="TextureRect" parent="VBoxContainer"]
margin_right = 803.0
margin_bottom = 64.0
texture = ExtResource( 1 )
stretch_mode = 4

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 101.0
margin_right = 803.0
margin_bottom = 361.0

[node name="buttons" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_right = 140.0
margin_bottom = 260.0

[node name="Jugar" type="Button" parent="VBoxContainer/HBoxContainer/buttons"]
pause_mode = 2
margin_right = 140.0
margin_bottom = 62.0
custom_colors/font_color_focus = Color( 0.937255, 0.992157, 0.996078, 1 )
custom_colors/font_color_hover = Color( 0, 0.811765, 1, 1 )
custom_colors/font_color_pressed = Color( 0.0509804, 0.466667, 0.466667, 1 )
custom_fonts/font = SubResource( 1 )
text = "Play"
flat = true
align = 0

[node name="Opciones" type="Button" parent="VBoxContainer/HBoxContainer/buttons"]
margin_top = 66.0
margin_right = 140.0
margin_bottom = 128.0
custom_colors/font_color_focus = Color( 0.937255, 0.992157, 0.996078, 1 )
custom_colors/font_color_hover = Color( 0, 0.811765, 1, 1 )
custom_colors/font_color_pressed = Color( 0.0509804, 0.466667, 0.466667, 1 )
custom_fonts/font = SubResource( 1 )
text = "Options"
flat = true
align = 0

[node name="Creditos" type="Button" parent="VBoxContainer/HBoxContainer/buttons"]
margin_top = 132.0
margin_right = 140.0
margin_bottom = 194.0
custom_colors/font_color_focus = Color( 0.937255, 0.992157, 0.996078, 1 )
custom_colors/font_color_hover = Color( 0, 0.811765, 1, 1 )
custom_colors/font_color_pressed = Color( 0.0509804, 0.466667, 0.466667, 1 )
custom_fonts/font = SubResource( 1 )
text = "Credits"
flat = true
align = 0

[node name="Quit" type="Button" parent="VBoxContainer/HBoxContainer/buttons"]
margin_top = 198.0
margin_right = 140.0
margin_bottom = 260.0
custom_colors/font_color_focus = Color( 0.937255, 0.992157, 0.996078, 1 )
custom_colors/font_color_hover = Color( 0, 0.811765, 1, 1 )
custom_colors/font_color_pressed = Color( 0.0509804, 0.466667, 0.466667, 1 )
custom_fonts/font = SubResource( 1 )
text = "Quit"
flat = true
align = 0

[node name="Dxb-01" type="Sprite" parent="."]
position = Vector2( 922, 547 )
scale = Vector2( 0.122483, 0.122483 )
texture = ExtResource( 3 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
autoplay = true

[connection signal="pressed" from="VBoxContainer/HBoxContainer/buttons/Jugar" to="." method="_on_Jugar_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/buttons/Opciones" to="." method="_on_Opciones_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/buttons/Creditos" to="." method="_on_Creditos_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/buttons/Quit" to="." method="_on_Quit_pressed"]
